fix: time content scrollbar

--- a/src/less/time-grid.less
+++ b/src/less/time-grid.less
@@ -104,6 +104,7 @@
 .rbc-time-content {
   display: flex;
   flex: 1 0 0%;
+  flex-basis: 0px;
   align-items: flex-start;
   width: 100%;
   border-top: 2px solid @calendar-border;
